fix bg sizes, fix mobile scroll bug, fix z-index modal window

--- a/src/App.sass
+++ b/src/App.sass
@@ -725,7 +725,56 @@ input::-webkit-inner-spin-button
         width: 420px
         height: 80px
 
-@media  screen and (min-width: 2000px)
+@media  screen and (min-width: 1800px)
+    .bg-layer.first
+        width: 400px
+        height: 400px
+    .bg-layer.second
+        width: 400px
+        height: 400px
+    .bg-layer.third
+        width: 400px
+        height: 400px
+    .bg-layer.fourth
+        width: 400px
+        height: 400px
+    .bg-layer.fifth
+        width: 400px
+        height: 400px
+
+@media  screen and (min-width: 2100px)
+    .bg-layer.first
+        width: 500px
+        height: 500px
+    .bg-layer.second
+        width: 500px
+        height: 500px
+    .bg-layer.third
+        width: 500px
+        height: 500px
+    .bg-layer.fourth
+        width: 500px
+        height: 500px
+    .bg-layer.fifth
+        width: 500px
+        height: 500px       
+
+@media  screen and (min-width: 2700px)
+    .bg-layer.first
+        width: 600px
+        height: 600px
+    .bg-layer.second
+        width: 600px
+        height: 600px
+    .bg-layer.third
+        width: 600px
+        height: 600px
+    .bg-layer.fourth
+        width: 600px
+        height: 600px
+    .bg-layer.fifth
+        width: 600px
+        height: 600px 
 
 @media  screen and (max-width: 1400px)
     .h1
