--- a/src/styles/LearnWindow.sass
+++ b/src/styles/LearnWindow.sass
@@ -6,6 +6,7 @@
   overflow: hidden
   box-shadow: 0 10px 25px var(--black-transparent-pre-low)
   background: transparent
+  z-index: 2
 
 
 .macos-titlebar 
